fix: remove white space when scrolling
- add pseudo element to html for background image

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Source+Code+Pro&family=Montserrat+Alternates:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Source+Code+Pro&family=Montserrat+Alternates:wght@300&display=swap");
 @import "./styles/variables";
 @import "./styles/mixins";
 
@@ -12,15 +12,14 @@
 }
 body {
   font-family: "Cutive Mono", monospace;
-  background: linear-gradient(-45deg, $color-purple, $color-sky-blue);
-  background-repeat: no-repeat;
-  @include text-decoration(#535790);
+  height: 100vh;
 }
 
 .App {
   @include flexy();
   h2 {
     text-align: center;
+    @include text-decoration($color-dark);
   }
 }
 
@@ -28,7 +27,7 @@ body {
   @include container-size($container-sizes);
   margin-top: 1rem;
   min-height: 40px;
-  padding: .8rem;
+  padding: 0.8rem;
   background: linear-gradient(
     -60deg,
     rgba($color-grey, 0.2),
