--- a/src/main.scss
+++ b/src/main.scss
@@ -2,8 +2,22 @@
 @import './styles/variables';
 
 html, body, #root, #root>div {
-  height: 100%;
+  height: 100%; 
+  width: 100%;
   margin: 0;
+}
+
+html {
+  position: absolute;
+  &::before {
+    content: '';
+    min-width: 100%;
+    min-height: 100vh;
+    position: fixed;
+    background: linear-gradient(-45deg, $color-purple, $color-sky-blue) fixed;
+    @include text-decoration(#535790);
+    z-index: -1;
+  }
 }
 
 p {
